disable top separator by default. fix account icon alignment

--- a/web/kiri/index.css
+++ b/web/kiri/index.css
@@ -246,6 +246,7 @@ th, tr, td {
 }
 
 #app-acct {
+    align-items: center;
     justify-content: flex-end;
 }
 #app-acct:hover #acct-pop {
